--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,11 +16,12 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
+    "path-to-regexp": "^6.3.0",
     "react-icons": "^5.5.0",
     "router": "^2.2.0"
   },
