--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1"
   }
 }
